# offline-flant5-with-flutter

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/biologychatbot/: MainActivity.kt
android/app/src/main/python/: chatbot.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: chatPage.dart  main.dart
lib/constants/: constants.dart
lib/ffi/: binding.dart  chatbot.cpp  encode_result.h  flutterUsage.dart  wrapper.dart
lib/models/: message.dart  onnx.dart
lib/services/: chatService.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
